style: fix problem with pagination on small widths

--- a/client/src/pages/Home/home.css
+++ b/client/src/pages/Home/home.css
@@ -41,3 +41,9 @@
         flex: 1;
     }
 }
+
+@media (width <= 380px) {
+    .home-container {
+        overflow: auto;
+    }
+}
